# 2nd_course_ilab

./: triangle.h
triangles/: CMakeLists.txt  function.txt  main.cpp  todo.txt  triangle.cpp  triangle.h  triangle.hpp  triangle_space.cpp  triangle_space.hpp  trianglespace.hpp  vector.cpp  vector.hpp
